<resources>
    <string name="app_name">WaveLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Business Agent</string>
    <string name="nav_header_subtitle">ag.bta@ag.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="show_installed_apps">Show installed apps</string>
    <string name="demo_size">46MB</string>
    <string name="msg_loading">Loading.Please wait!</string>
    <string name="action_settings">Settings</string>

    <string name="top_categories">Top categories</string>
    <string name="all_categories">All categories</string>
    <string name="micsearch">MicSearch</string>

    <string name="grid_title">Grid Layout</string>
    <string name="list_title">List Layout</string>

    <string name="list_title1">List 1 Layout</string>
    <string name="list_title2">List 2 Layout</string>
    <string name="list_title3">List 3 Layout</string>
    <string name="list_title4">List 4 Layout</string>
    <string name="list_title5">List 5 Layout</string>
    <string name="list_title6">List 6 Layout</string>


    //ABout
    <string name="rate_five_stars">Rate this app 5 stars</string>
    <string name="version">Version %s</string>
    <string name="error">Error</string>
    <string name="url_bitbucket">http://cdn.idigitaltimes.com</string>
    <string name="about">About</string>
    <!--BottomBarview3-->
    <string name="bottombar_item_left">Left</string>
    <string name="bottombar_item_leftbutone">Left Next</string>
    <string name="bottombar_item_center">DashBoard</string>
    <string name="bottombar_item_rightb4one">Before Right</string>
    <string name="bottombar_item_right">Right</string>
    <string name="topbar_item_left">Top Left</string>
    <string name="topbar_item_leftbutone">Top Left Next</string>
    <string name="topbar_item_center">Home</string>
    <string name="topbar_item_rightb4one">Top Before Right</string>
    <string name="topbar_item_right">Top Right</string>
    //Image compress
    <string name="no_camera_exists">No application exists for camera!</string>
    <string name="permission_request_denied">Permission request denied</string>

<!--<temporary> -->
    <string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="more_button">MORE</string>
    <string name="card_app_name">App Name</string>
    <string name="sample_rating">4.3</string>
    <string name="free">FREE</string>

<!--    Search-->

    <string name="searchpreference_search">Search…</string>
    <string name="searchpreference_clear">Clear</string>
    <string name="searchpreference_history_entry">History entry</string>
    <string name="searchpreference_more">More</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_results">No results</string>

<!--   Excel Imports-->
    <string name="import_contacts">Import Contacts</string>
    <string name="export_contacts">Export Into Excel</string>
    <string name="read_excel_data">Read From Excel</string>
</resources>